Added basic functionality and tests template
Added:
Dataset file parsing
Rejected words file parsing
Vocabulary creation
Parsing questions based on vocabulary
Most similar question finding

--- a/QAMachine/QAMachine.vcxproj
+++ b/QAMachine/QAMachine.vcxproj
@@ -169,6 +169,10 @@
     <ClInclude Include="IQAMachineCore.h" />
     <ClInclude Include="QAPlainTextHandle.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Q_A_set.txt" />
+    <Text Include="rejected.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
