--- a/QAMachine/QAMachine.vcxproj
+++ b/QAMachine/QAMachine.vcxproj
@@ -168,6 +168,47 @@
     <Text Include="quiz.txt" />
     <Text Include="Q_A_set.txt" />
     <Text Include="rejected.txt" />
+    <Text Include="testDataset\unsorted-0.txt" />
+    <Text Include="testDataset\unsorted-1.txt" />
+    <Text Include="testDataset\unsorted-10.txt" />
+    <Text Include="testDataset\unsorted-11.txt" />
+    <Text Include="testDataset\unsorted-12.txt" />
+    <Text Include="testDataset\unsorted-13.txt" />
+    <Text Include="testDataset\unsorted-14.txt" />
+    <Text Include="testDataset\unsorted-2.txt" />
+    <Text Include="testDataset\unsorted-3.txt" />
+    <Text Include="testDataset\unsorted-4.txt" />
+    <Text Include="testDataset\unsorted-5.txt" />
+    <Text Include="testDataset\unsorted-6.txt" />
+    <Text Include="testDataset\unsorted-7.txt" />
+    <Text Include="testDataset\unsorted-8.txt" />
+    <Text Include="testDataset\unsorted-9.txt" />
+    <Text Include="trainingDataset\animals.txt" />
+    <Text Include="trainingDataset\art.txt" />
+    <Text Include="trainingDataset\astrology.txt" />
+    <Text Include="trainingDataset\astronomy.txt" />
+    <Text Include="trainingDataset\billionaire.txt" />
+    <Text Include="trainingDataset\cinema-tv.txt" />
+    <Text Include="trainingDataset\clothes.txt" />
+    <Text Include="trainingDataset\fairy-tales.txt" />
+    <Text Include="trainingDataset\geography.txt" />
+    <Text Include="trainingDataset\greek-myths.txt" />
+    <Text Include="trainingDataset\harry-potter.txt" />
+    <Text Include="trainingDataset\history.txt" />
+    <Text Include="trainingDataset\it-internet.txt" />
+    <Text Include="trainingDataset\jokes.txt" />
+    <Text Include="trainingDataset\literature.txt" />
+    <Text Include="trainingDataset\military.txt" />
+    <Text Include="trainingDataset\music.txt" />
+    <Text Include="trainingDataset\other.txt" />
+    <Text Include="trainingDataset\plants.txt" />
+    <Text Include="trainingDataset\proverbs.txt" />
+    <Text Include="trainingDataset\russian-cars.txt" />
+    <Text Include="trainingDataset\scanwords.txt" />
+    <Text Include="trainingDataset\science.txt" />
+    <Text Include="trainingDataset\sport.txt" />
+    <Text Include="trainingDataset\traditions.txt" />
+    <Text Include="trainingDataset\traveling.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
