--- a/QAMachine/QAMachine.vcxproj
+++ b/QAMachine/QAMachine.vcxproj
@@ -159,15 +159,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="QAMachineCore.cpp" />
-    <ClCompile Include="QApairsQAset.cpp" />
-    <ClCompile Include="QAVocabulary.cpp" />
+    <ClCompile Include="MachineCore.cpp" />
+    <ClCompile Include="QAPairsSet.cpp" />
+    <ClCompile Include="Vocabulary.cpp" />
+    <ClCompile Include="Stemmer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="QAMachineCore.h" />
-    <ClInclude Include="IQAMachineCore.h" />
-    <ClInclude Include="QApairsQAset.h" />
-    <ClInclude Include="QAVocabulary.h" />
+    <ClInclude Include="MachineCore.h" />
+    <ClInclude Include="IMachineCore.h" />
+    <ClInclude Include="QAPairsSet.h" />
+    <ClInclude Include="Vocabulary.h" />
+    <ClInclude Include="Stemmer.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="quiz.txt" />
