Added displaying parsing progress and multi-answering
- Program displays multiple answers in all configurations.
- Stemmer can be switched off by macro-define

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 project(QAMachine)
 
 set(SOURCE_CORE QAMachineCore.cpp QAPairsSet.cpp Stemmer.cpp Vocabulary.cpp)
-set(HEADER_CORE QAMachineCore.h QAPairsSet.h Stemmer.h Vocabulary.h)
+set(HEADER_CORE QAMachineCore.h QAPairsSet.h Stemmer.h Vocabulary.h GlobalDefines.h)
 
 include_directories(src/core)
 
